--- a/HTML.html
+++ b/HTML.html
@@ -111,6 +111,10 @@ background
 color
 font-size
 
+recursos adicionales
+
+https://www.codecademy.com/learn/paths/learn-html/tracks/learn-html/modules/learn-html-elements/cheatsheet
+
 !-->
 <body>
 	<h1>Esto es un titlulo del body</h1>
