agrego txt de repaso

--- a/HTML.html
+++ b/HTML.html
@@ -56,7 +56,7 @@ agregando el tagn <style/> en el tag <head> ejemplo
 
 agregando tag <link/> ejemplo
 
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
