--- a/soyhenry-prepcourse/HTML.html
+++ b/soyhenry-prepcourse/HTML.html
@@ -70,6 +70,13 @@ agregando tag <link/> ejemplo
 </body>
 </html>
 
+la etiqueta <strong> a diferencia de la <b>, mas alla de poner en negrita tambien al texto que contenga, me dice qulo que contiene tiene importancia semantica
+la etiqueta <em> a diferencia de la <i> mas alla de poner cursiva, tiene mayor importancia semantica
+
+
+etiqueta <pre> se usa como <p> pero esta respeta tal cual escribo todo con los espacios y br
+
+
 para poder aplicar las reglas de estilo a los elementos html necesitamos selecionar los elementos que deseamos aplicar
 
 una forma es usar un selector de tipo (ejemplo con los <img> o los <p>)
