--- a/freecodecamp/surveyform/index.html
+++ b/freecodecamp/surveyform/index.html
@@ -92,13 +92,21 @@
                 <label>Hora<input type="time" name="diaonoche" value="noche" required/></label>
                 <input type="checkbox" name="terms" class="inline" required value="checkbox"/> Acepto los<a href="www.google.com">terminos y condicones</a></label>
                 <label>
-                <input type="checkbox" name="disclaimer" class="inline" required value="checkbox"/> Acepto el <a href="www.google.com">descargo de responsabilidad</a></label
+                <input type="checkbox" name="disclaimer" class="inline" required value="checkbox"/> Acepto el <a href="www.google.com">descargo de responsabilidad</a></label>
                 <p>Comentarios adicionales</p>
                 <textarea rows="5" cols="30" placeholder="Escribelo aqui.." ></textarea>
             </fieldset>
         <input type="submit" value="Enviar formulario" id="submit" class="submit" />
         <h2><span>👋🏼</span> Nos vemos en las graficas!<span>👋🏼</span></h2>
-
-        </form>
+        <fieldset class="links">
+            <p>
+            <a href="https://github.com/joaquinmetayer"><sapn>💾</sapn> GitHub</a>
+            <a href="https://www.youtube.com/channel/UChepHxgZmukOteW-6c796wQ"><span>📹</span> YouTube</a>
+            <br>
+            <a href="https://www.instagram.com/joaquinmetayer/"><span>📸</span> Instagram</a>
+            <a href="https://joaquinmetayer.github.io/personalweb/"><span>👨🏻‍💻</span> Personal Web</a>
+            </p>
+        </fieldset>
+        </form>  
     </body>
 </html>
