--- a/freecodecamp/surveyform/index.html
+++ b/freecodecamp/surveyform/index.html
@@ -82,15 +82,15 @@
             </fieldset>
             <hr>
             <fieldset>
-                <h2><span>👇🏼</span> Elige el dia y hora <span>👇🏼</span><br> para conectarnos en zoom y hablar</h2>
-                <p class="descripcioncentrada">Si dispongo de este horario seras notificado via email</p>
+                <h2><span>👇🏼</span> Elige el dia y hora <span>👇🏼</span><br> Para conectarnos en zoom y hablar!</h2>
+                <p class="descripcioncentrada">Si dispongo o no de este horario seras notificado via email</p>
                 <label>Elige la zona horaria</label>
                
                 <label><input type="radio" name="zonahoraria" class="inline" value="gmt-3"/> GMT -3 (Argentina)</label>
         <label><input type="radio" name="zonahoraria" class="inline" value="gmt+2"/> GMT +2</label>
                 <label>Dia<input type="date" required/></label>
                 <label>Hora<input type="time" name="diaonoche" value="noche" required/></label>
-                <input type="checkbox" name="terms" class="inline" required value="checkbox"/> Acepto los<a href="www.google.com">terminos y condicones</a></label>
+                <input type="checkbox" name="terms" class="inline" required value="checkbox"/> Acepto los <a href="www.google.com">terminos y condicones</a></label>
                 <label>
                 <input type="checkbox" name="disclaimer" class="inline" required value="checkbox"/> Acepto el <a href="www.google.com">descargo de responsabilidad</a></label>
                 <p>Comentarios adicionales</p>
