--- a/freecodecamp/responsivewebdesing/surveyform/index.html
+++ b/freecodecamp/responsivewebdesing/surveyform/index.html
@@ -2,14 +2,15 @@
 <html>
     <head>
     <title>2388HC Mentoria privada</title>
-    <link rel="icon" type="icon" href="./odieblackandwhites.png">
+    <link rel="icon" type="icon" href="./odiepngball.png">
     <link rel="stylesheet" href="./styles.css"/>
     </head>
     <body>
-        <img class="logo" src="./odieblackandwhite.png">
+        <div id="backgroundcolor">
+        <img class="logo" src="./odiepngball.png">
         <h1 id="title">2388HC</h1>
         <h1> Mentoria privada</h1>
-        <!-- <img src="./macbook-air-mediummt4odie.png"> -->
+
         <p class="descripcioncentrada">Lleva tu trading al siguiente nivel de la mano de Joaquin</p>
         <hr>
         <div class="description">        
@@ -27,7 +28,7 @@
             </p>
         </div>
         <hr>
-        <p class="price">2.500 USD</p>
+        <p class="price">$ 2.999 USD</p>
         <hr>
         <h2><span>⬇️</span> Llena el formulario <span>⬇️</span></h2>
         <form id="survey-form">
@@ -107,6 +108,7 @@
             <a href="https://joaquinmetayer.github.io/personalweb/"><span>👨🏻‍💻</span> Personal Web</a>
             </p>
         </fieldset>
-        </form>  
+        </form> 
+    </div> 
     </body>
 </html>
